[project]
name = "chatbot"
version = "0.1.0"
description = "Conversational chatbot using LangGraph and Chainlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "chainlit>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    
]
